Starbucks meetup changes

--- a/cellar.html
+++ b/cellar.html
@@ -58,24 +58,35 @@ by Emerald Doors">
 			
 			<div class="rightcontainer">
 				<h2> Cellar Doors </h2>
-				<p>Flat or sloped, stock or standard size, we install them all. Don't trust your installation to an amateur; cellar doors need to sit flat and be made water tight or your basement/cellar will become damp and moldy. We install Bilco, Gordon, and custom made Commercial Cellar Doors. 
+				<p>Flat or sloped, standard or custom sized, residential waterproof or commercial water resistant, we install them all. Don't trust your cellar door installation to an amateur and endure a leaking basement. There is a wide  variety of cellar doors available and we can provide expert advice for the best door cellar door for your needs and budget.
+				<br/>
+				We install Gordon and Bilco doors, as well as our own custom cellar doors. 
 				</p>		
-				<p>Email us a picture of the door you need replaced along with the opening size.  We will send you a firm quote.
+				<p>Email us a picture of the door you need replaced or the opening that requires a cellar door, along with the measurements, and we will give you a firm quote.
+				<br/>
+				Please follow link to see exactly how to measure: <a href="files/img243.pdf">Link</a>
 				</p>
 				<table class="style2">
 					<tr>
-						<td><img src="images/cellar/1.jpg" class="style1"/> <div>Sloped or flat cellar doors</div></td>
-						<td><img src="images/cellar/2.jpg" class="style2"/> <div><a href="cellargallery1.html">Custom-made sloped cellar doors<br />(See construction process)</a></div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Sloped Gordon residential cellar door - guaranteed waterproof</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div><a href="cellargallery1.html">Custom made waterproof sloped cellar door</a></div></td>
 					</tr>					
 					<tr>
-						<td><img src="images/cellar/3.jpg" class="style1"/> <div>Oversized cellar Door with extension</div></td>
-						<td><img src="images/cellar/4.jpg" class="style2"/> <div>Our cellar doors are double braced to add extra strength</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Flat commercial cellar door." Made of non-slip 3/16" thick steel plate with partially concealed hinges."</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Mounted on 3" by 3" angle iron, painted rust resistant black.</div></td>
+					</tr>
+					<tr>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Single door waterproof commercial cellar door - "Perfect for Brooklyn coal chutes."</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>4 way opening door - "replace your sloped cellar door with a flat cellar door and cabinet style doors to create more space"</div></td>
+					</tr>
+					<tr>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>We make stairwells and railings leading to your basement</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Bilco and Acudor heavy duty aluminum, waterproof cellar doors</div></td>
 					</tr>
 					<tr>
 						<td><img src="images/cellar/5.jpg" class="style2"/> <div>Cellar doors - Protective screen</div></td>
 						<td><img src="images/cellar/6.jpg" class="style2"/> <div>Prevent liability with our stairwell screen</div></td>
 					</tr>
-
 				</table>
 				
 			</div>
