--- a/commercial.html
+++ b/commercial.html
@@ -62,12 +62,16 @@
 				</p>
 				<table class="style2">
 					<tr>
-						<td><img src="images/commercial/1.jpg" class="style2"/> <div>Aluminum front</div></td>
-						<td><img src="images/commercial/2.jpg" class="style2"/> <div>Glass front</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Aluminum storefront doors - in bronze or aluminum/chrome finish</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Available in narrow, medium, and wide stiles</div></td>
 					</tr>
 					<tr>
-						<td><img src="images/commercial/3.jpg" class="style2"/> <div>Painted fire rated door with lever handle</div></td>
-						<td><img src="images/commercial/4.jpg" class="style2"/> <div>Aluminum storefront door</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Concealed door closers repaired and replaced, surface mounted closers installed</div></td>
+						<td><img src="images/commercial/3.jpg" class="style2"/> <div><a href="fire.html">Fire rated doors with lever handle</a></div></td>
+					</tr>
+					<tr>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>We install, replace electric strikes</div></td>
+						<td><img src="images/noPic.jpg" class="style2"/> <div>Intercoms, card access systems installed</div></td>
 					</tr>
 				</table>
 				<hr />
