--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<td style="box-shadow:0px 0px 0px 0px;"></td>
 							<td><img src="images/fire/1.jpg" class="style2"/> <div><a href="fire.html">Painted fire rated door with panic device and 5 by 20 window</a></div></td>
 							<td><img src="images/fire/3.jpg" class="style2"/> <div><a href="fire.html">Recessed panel fire rated door (click on gallery)</a></div></td>
-							<td><img src="images/soundresistant/1.jpg" class="style2"/> <div><a href="soundresistant.html">Sound resistant door:<br />interior or exterior</a></div></td>
+							<td><img src="images/soundresistant/1.jpg" class="style2"/> <div><a href="soundresistant.html">Sound resistant door:<br />interior or exterior<br/>Airtight: prevents odors</a></div></td>
 						</tr>
 						<tr>
 							<td><img src="images/commercial/1.jpg" class="style2"/> <div><a href="commercial.html">Commercial doors:<br />Repair or replace (most sized in stock for immediate installation)</a></div></td>
