Worked on the door pages

--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 			<div class="title-block-pattern-img"></div>
 		</div>
 		<div class="container title-block-container">
-			<img class="logo" src="images/logo.gif"/>
+			<a href="index.html"><img class="logo" src="images/logo.gif"/></a>
 			<div class="title-block-content">
 				<h1 class="hidden-sm" style="font-size: 45px">Emerald Doors</h1>
 				<h1 class="visible-sm" style="font-size: 30px; font-weight:bold">Emerald Doors</h1>
@@ -18,7 +18,7 @@
 				<div style="font-size: 16px; font-weight: bold">CALL US NOW 8am-8pm</div>
 				<div>Phone quotes gladly provided!</div>
 				<div style="font-size: 28px; font-weight: bold">646-703-3444</div>
-				<div><a href="#">Queens/Manhattan/Bronx/Brooklyn/SI</a></div>
+				<div><a class="alt-style-link" href="#">Queens/Manhattan/Bronx/Brooklyn/SI</a></div>
 				<div>Email us at: <span style="font-weight: bold">peter@emeralddoorsnyc.com</span></div>
 			</div>
 		</div>
@@ -30,14 +30,14 @@
 			<li role="presentation" class="dropdown" id="nav-door-dropdown">
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Doors <span class="caret"></span></a>
 				<ul class="dropdown-menu" style="font-size: 16px">
-					<li><a href="#">Cellar Doors</a></li>
-					<li><a href="#">Commercial Doors</a></li>
-					<li><a href="#">Fire Rated Doors</a></li>
-					<li><a href="#">Gate Doors</a></li>
-					<li><a href="#">Sound Resistant Doors</a></li>
+					<li><a href="cellar.html">Cellar Doors</a></li>
+					<li><a href="commercial.html">Commercial Doors</a></li>
+					<li><a href="fire.html">Fire Rated Doors</a></li>
+					<li><a href="gate.html">Gate Doors</a></li>
+					<li><a href="soundresistant.html">Sound Resistant Doors</a></li>
 				</ul>
 			</li>
-			<li><a href="#">Window Gates</a></li>
+			<li><a href="windowgates.html">Window Gates</a></li>
 			<li><a href="#">Violations Corrected</a></li>
 			<li><a href="#">Contact Us</a></li>
 			<li><a href="#">Feedback</a></li>
