--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<div class="card-img">
 								<img src="images/0001.jpg" class="img-responsive center-block">
 							</div>
-							<div class="card-text">Painted fire rated door with panic device and 5 by 20 window</div>
+							<a href="fire.html"><div class="card-text">Painted fire rated door with panic device and 5 by 20 window</div></a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
@@ -50,7 +50,7 @@
 							<div class="card-img">
 								<img src="images/0002.jpg" class="img-responsive center-block">
 							</div>
-							<div class="card-text">Recessed panel fire rated door (click on gallery)</div>
+							<a href="fire.html"><div class="card-text">Recessed panel fire rated door<br/>(click on gallery)</div></a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
@@ -58,15 +58,83 @@
 							<div class="card-img">
 								<img src="images/0003.jpg" class="img-responsive center-block">
 							</div>
-							<div class="card-text">Sound resistant door: interior or exterior</div>
+							<a href="soundresistant.html"><div class="card-text">Sound resistant door:<br/>interior or exterior</div></a>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6">
 						<div class="card">
 							<div class="card-img">
-								<img src="images/0020.jpg" class="img-responsive center-block">
+								<img src="images/0004.jpg" class="img-responsive center-block">
 							</div>
-							<div class="card-text">test</div>
+							<a href="commercial.html"><div class="card-text">Commercial doors:<br/>Repair or replace (most sized in stock for immediate installation)</div></a>
+						</div>
+					</div>
+				</div>
+				<div class="row text-center limited-height">
+					<div class="col-md-3 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="cellar.html"><div class="card-text">Cellar doors:<br/>Waterproof, sloped or flat<br/>(we can make any size)</div></a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="cellar.html"><div class="card-text">Commercial cellar doors</div></a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="gate.html"><div class="card-text">Gate doors</div></a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="fire.html"><div class="card-text">Boiler room doors/all styles of fire rated doors</div></a>
+						</div>
+					</div>
+				</div>
+				<div class="row text-center limited-height">
+					<div class="col-md-3 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="cellar.html"><div class="card-text">Cellar doors:<br/>Waterproof, sloped or flat<br/>(we can make any size)</div></a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="cellar.html"><div class="card-text">Commercial cellar doors</div></a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="gate.html"><div class="card-text">Gate doors</div></a>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="fire.html"><div class="card-text">Boiler room doors/all styles of fire rated doors</div></a>
 						</div>
 					</div>
 				</div>
