Fix links on mobile

--- a/header.html
+++ b/header.html
@@ -56,7 +56,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-			<a class="navbar-brand" href="#">Emerald Doors NYC</a>
+			<a class="navbar-brand" href="index.html">Emerald Doors NYC</a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -64,11 +64,11 @@
 					<li role="presentation" class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Doors <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Cellar Doors</a></li>
-							<li><a href="#">Commercial Doors</a></li>
-							<li><a href="#">Fire Rated Doors</a></li>
-							<li><a href="#">Gate Doors</a></li>
-							<li><a href="#">Sound Resistant Doors</a></li>
+							<li><a href="cellar.html">Cellar Doors</a></li>
+							<li><a href="commercial.html">Commercial Doors</a></li>
+							<li><a href="fire.html">Fire Rated Doors</a></li>
+							<li><a href="gate.html">Gate Doors</a></li>
+							<li><a href="soundresistant.html">Sound Resistant Doors</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Window Gates</a></li>
