--- a/fire.html
+++ b/fire.html
@@ -24,9 +24,9 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
+								<img src="images/0008.jpg" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">Painted, lever handle</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -34,7 +34,7 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">Recess panel doors - pre-war style</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -42,7 +42,59 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">Wood veneer - wide variety of finishes</div>
+						</div>
+					</div>
+				</div>
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Sound resistant doors</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Stainless steel</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0009.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Boiler room door with fusible link vent</div>
+						</div>
+					</div>
+				</div>
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0010.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Fire rated door with decorative applied molding</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Double and oversized doors</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0009.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Multiple recess panel door</div>
 						</div>
 					</div>
 				</div>
