--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
 	<body>
-		<div id="header">
-		</div>
+		<div id="header"></div>
 		<div class="container">
 			<div class="page-header">
 				<h1>Welcome to Emerald Doors!</h1>
@@ -37,104 +36,80 @@
 			</div>
 			<div>
 				<div class="row text-center limited-height">
-					<div class="col-md-3 col-sm-6">
+					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
 								<img src="images/0001.jpg" class="img-responsive center-block">
 							</div>
-							<a href="fire.html"><div class="card-text">Painted fire rated door with panic device and 5 by 20 window</div></a>
+							<a href="fire.html"><div class="card-text">Fire rated door with panic device and 5x20 window</div></a>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6">
+					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
 								<img src="images/0002.jpg" class="img-responsive center-block">
 							</div>
-							<a href="fire.html"><div class="card-text">Recessed panel fire rated door<br/>(click on gallery)</div></a>
+							<a href="fire.html"><div class="card-text">Recess panel fire rated door (painted - two tone)</div></a>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="fire.html"><div class="card-text">Wood veneer fire rated door</div></a>
+						</div>
+					</div>
+				</div>
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0005.jpg" class="img-responsive center-block">
+							</div>
+							<a href="cellar.html"><div class="card-text">Cellar doors: waterproof, sloped or flat.  We make custom sizes - see our gallery</div></a>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="commercial.html"><div class="card-text">Heavy duty commercial doors</div></a>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0007.jpg" class="img-responsive center-block">
+							</div>
+							<a href="gate.html"><div class="card-text">Gate doors (see gallery)</div></a>
+						</div>
+					</div>
+				</div>
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="commercial.html"><div class="card-text">Store front glass doors / commercial doors (see our gallery)</div></a>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<a href="soundresistant.html"><div class="card-text">Sound resistant doors (see our gallery)</div></a>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
 								<img src="images/0003.jpg" class="img-responsive center-block">
 							</div>
-							<a href="soundresistant.html"><div class="card-text">Sound resistant door:<br/>interior or exterior</div></a>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/0004.jpg" class="img-responsive center-block">
-							</div>
-							<a href="commercial.html"><div class="card-text">Commercial doors:<br/>Repair or replace (most sized in stock for immediate installation)</div></a>
-						</div>
-					</div>
-				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="cellar.html"><div class="card-text">Cellar doors:<br/>Waterproof, sloped or flat<br/>(we can make any size)</div></a>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="cellar.html"><div class="card-text">Commercial cellar doors</div></a>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="gate.html"><div class="card-text">Gate doors</div></a>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="fire.html"><div class="card-text">Boiler room doors/all styles of fire rated doors</div></a>
-						</div>
-					</div>
-				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="cellar.html"><div class="card-text">Cellar doors:<br/>Waterproof, sloped or flat<br/>(we can make any size)</div></a>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="cellar.html"><div class="card-text">Commercial cellar doors</div></a>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="gate.html"><div class="card-text">Gate doors</div></a>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<a href="fire.html"><div class="card-text">Boiler room doors/all styles of fire rated doors</div></a>
+							<a href="gate.html"><div class="card-text">Commercial hardware, locks, intercom/buzzer systems installed</div></a>
 						</div>
 					</div>
 				</div>
