--- a/soundresistant.html
+++ b/soundresistant.html
@@ -17,7 +17,7 @@
 				<h1>Sound Resistant Doors</h1>
 			</div>
 			<div class="page-description">
-				<p>Soundproof doors are necessary for recording studios.  However, most people don't need that level of noise reduction.  Sound resistant doors will reduce significant volume at a fraction of the cost.  Let our experts come and evaluate your acoustical needs.</p>
+				<p>Whether you need total silence for a recording studio, major sound reduction for apartment  doors, or minor sound reduction for interior doors, Emerald has your door.  We also have sound resistance; let our experts come and evaluate your acoustical needs.</p>
 			</div>
 			<div>
 				<div class="row text-center limited-height">
@@ -26,7 +26,7 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">35 STC wood door- about 84% sound reduction</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -34,18 +34,64 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">35 STC fire rated door</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
+								<img src="images/0011.jpg" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">35 STC door with painted gaskets and painted drop down automatic bottom</div>
 						</div>
 					</div>
 				</div>
+
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">42 to 45 STC door - about 94% sound reduction - drop down button is concealed</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">42-45 STC door with applied molding and gloss paint</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">51 to 56 STC doors - virtual silence</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">yes we install sound resistant sheet rock</div>
+						</div>
+					</div>
+					<div class="col-md-8 col-sm-6">
+						<div class="card">
+							<div class="card-stc-header"><h1>STC Ratings Explained</h1></div>
+							<hr/>
+							<div class="card-stc-paragraph">pending paragraph</div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
