--- a/commercial.html
+++ b/commercial.html
@@ -17,16 +17,17 @@
 				<h1>Commercial Doors</h1>
 			</div>
 			<div class="page-description">
-				<p>Most commercial doors don't need to be replaced, only repaired. We stock a huge inventory of door closers (concealed and exposed), pivots, panic bars, push and lever handles, saddles, locks, and cylinders.  We also replace broken glass.  Call us for fast service.</p>
+				<p>Most commercial doors don't need to be replaced, just repaired. We stock a large inventory of door closers, pivots, panic doors, hinges, push panels, lever handles, saddles, lock, and cylinders.</p>
+				<p>If new doors are required, we offer a wide variety of reasonably priced doors for fast installation.</p>
 			</div>
 			<div>
 				<div class="row text-center limited-height">
 					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
+								<img src="images/0004.jpg" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">Aluminum front</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -34,7 +35,26 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">Medium stile store front door - aluminum/chrome finish</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0012.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Narrow stile store front door - dark bronze finish</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0008.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Fire rated door with lever handle</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -42,7 +62,15 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">Stainless steel doors</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">????</div>
 						</div>
 					</div>
 				</div>
