Add content for doors

--- a/cellar.html
+++ b/cellar.html
@@ -17,9 +17,9 @@
 			</div>
 			<div class="page-description">
 				<p>Flat or sloped, standard or custom sized, residential waterproof or commercial water resistant, we install them all. Don't trust your cellar door installation to an amateur and endure a leaking basement. There is a wide  variety of cellar doors available and we can provide expert advice for the best door cellar door for your needs and budget.</p>
-				<p>We install Gordon and Bilco doors, as well as our own custom cellar doors.</p>	
+				<p>We install Bilco, Gordon, and our own custom-made commercial cellar doors.</p>	
 				<p>Email us a picture of the door you need replaced or the opening that requires a cellar door, along with the measurements, and we will give you a firm quote.</p>
-				<p>Please follow link to see exactly how to measure: <a href="files/img243.pdf">Link</a></p>
+				<p>Click this link to see how to measure a cellar door: <a href="files/cellar-measurement.pdf">Link</a></p>
 			</div>
 			<div>
 				<div class="row text-center limited-height">
@@ -28,7 +28,7 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">Painted fire rated door with panic device and 5 by 20 window</div>
+							<div class="card-text">Sloped waterproof door</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -36,7 +36,7 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<a href="#"><div class="card-text">Custom made waterproof sloped cellar door</div></a>
+							<div class="card-text">Custom made sloped door</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -44,7 +44,33 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">Flat commercial cellar door." Made of non-slip 3/16" thick steel plate with partially concealed hinges."</div>
+							<div class="card-text">Flat heavy duty commercial cellar door</div>
+						</div>
+					</div>
+				</div>
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0013.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Our commercial cellar doors are douvle braced for extra strength</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Quad door - replace your sloped door and increase yard space</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Water proof single door -perfect for Brooklyn coal chute</div>
 						</div>
 					</div>
 				</div>
@@ -54,57 +80,21 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">Mounted on 3" by 3" angle iron, painted rust resistant black.</div>
+							<div class="card-text">Bilco heavy duty aluminum door</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Single door waterproof commercial cellar door - "Perfect for Brooklyn coal chutes."</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">4 way opening door - "replace your sloped cellar door with a flat cellar door and cabinet style doors to create more space"</div>
-						</div>
-					</div>
-				</div>
-				<div class="row text-center limited-height">
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">We make stairwells and railings leading to your basement</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">Bilco and Acudor heavy duty aluminum, waterproof cellar doors</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
+								<img src="images/0014.jpg" class="img-responsive center-block">
 							</div>
 							<div class="card-text">Cellar doors - Protective screen</div>
 						</div>
 					</div>
-				</div>
-				<div class="row text-center limited-height">
 					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
+								<img src="images/0015.jpg" class="img-responsive center-block">
 							</div>
 							<div class="card-text">Prevent liability with our stairwell screen</div>
 						</div>
