--- a/gate.html
+++ b/gate.html
@@ -24,9 +24,17 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="card">
 							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
+								<img src="images/0007.jpg" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">Alley gate door with panic bar for egress in case of fire</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0016.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Expanded metal gate</div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
@@ -34,18 +42,65 @@
 							<div class="card-img">
 								<img src="images/placeholder.png" class="img-responsive center-block">
 							</div>
-							<div class="card-text">blah</div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="card">
-							<div class="card-img">
-								<img src="images/placeholder.png" class="img-responsive center-block">
-							</div>
-							<div class="card-text">blah</div>
+							<div class="card-text">Fire department approved door gate - double sided lock not necessary</div>
 						</div>
 					</div>
 				</div>
+
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0017.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Basic door gate - no ornments</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0018.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Full entrance enclosure with gate door</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Storm security door</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row text-center limited-height">
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0019.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Custom double gate door</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/0020.jpg" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Patio gate door</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
+						<div class="card">
+							<div class="card-img">
+								<img src="images/placeholder.png" class="img-responsive center-block">
+							</div>
+							<div class="card-text">Matching window guards</div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
