--- a/header.html
+++ b/header.html
@@ -38,6 +38,7 @@
 				</ul>
 			</li>
 			<li><a href="windowgates.html">Window Gates</a></li>
+			<li><a href="locks.html">Locks</a></li>
 			<li><a href="#">Violations Corrected</a></li>
 			<li><a href="#">Contact Us</a></li>
 			<li><a href="#">Feedback</a></li>
