--- a/soundresistant.html
+++ b/soundresistant.html
@@ -84,10 +84,10 @@
 						</div>
 					</div>
 					<div class="col-md-8 col-sm-6">
-						<div class="card">
+						<div class="card card-stc">
 							<div class="card-stc-header"><h1>STC Ratings Explained</h1></div>
 							<hr/>
-							<div class="card-stc-paragraph">pending paragraph</div>
+							<div class="card-stc-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
 						</div>
 					</div>
 				</div>
