--- a/commercial.html
+++ b/commercial.html
@@ -74,6 +74,46 @@
 						</div>
 					</div>
 				</div>
+				<hr/>
+				<h3>Commercial hardware provided and installed.</h3>
+				<div class="commercial-hardware">
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/1.gif">
+						<div>Concealed door closer</div>
+					</div>
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/2.gif">
+						<div>Dorma door closer</div>
+					</div>
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/3.gif">
+						<div>Card access</div>
+					</div>
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/4.jpg">
+						<div>Adams right handles push paddle</div>
+					</div>
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/5.gif">
+						<div>Electric strike</div>
+					</div>
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/6.gif">
+						<div>Simplex lock</div>
+					</div>
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/7.jpg">
+						<div>Basic panic bar</div>
+					</div>
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/8.jpg">
+						<div>Panic bar with alarm</div>
+					</div>
+					<div class="commercial-hardware-item">
+						<img src="images/commercial-hardware/9.jpg">
+						<div>Door pivots</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
