New header style

--- a/header.html
+++ b/header.html
@@ -1,48 +1,39 @@
 <!-- Header for tablets/desktops -->
 <div class="hidden-xs">
-	<div class="container-fluid title-block">
-		<div class="title-block-pattern">
-			<div class="title-block-pattern-img"></div>
-		</div>
-		<div class="container title-block-container">
-			<a href="index.html"><img class="logo" src="images/logo.gif"/></a>
-			<div class="title-block-content">
-				<h1 class="hidden-sm" style="font-size: 45px">Emerald Doors</h1>
-				<h1 class="visible-sm" style="font-size: 30px; font-weight:bold">Emerald Doors</h1>
-				<h4>New York City</h4>
-				<p class="title-block-content-subheader">LICENSED BONDED INSURED</p>
+	<div class="container title-block">
+		<a href="index.html"><img class="logo" src="images/logo.gif"/></a>
+		<div class="title-block-content">EMERALD DOORS</div>
+		<div class="title-block-side">
+			<div style="position:absolute; right: 0px; top:0px">
+				<a style="color: red" href="https://www.yelp.com/biz/emerald-doors-astoria"><img height="40" src="images/Yelp_trademark_RGB_outline.png"/></a>
 			</div>
-
-			<div class="title-block-side">
-				<img src="images/creditCardLogo.jpg" />
-				<div style="font-size: 16px; font-weight: bold">CALL US NOW 8am-8pm</div>
-				<div>Phone quotes gladly provided!</div>
-				<div style="font-size: 28px; font-weight: bold">646-703-3444</div>
-				<div><a class="alt-style-link" href="#">Queens/Manhattan/Bronx/Brooklyn/SI</a></div>
-				<div>Email us at: <span style="font-weight: bold">peter@emeralddoorsnyc.com</span></div>
-			</div>
+			<img src="images/creditCardLogo.jpg" />
+			<div style="font-size: 16px; font-weight: bold">CALL US NOW 8am-8pm</div>
+			<div style="font-size: 28px; font-weight: bold">646-703-3444</div>
+			<div>Phone quotes gladly provided!</div>
+			
+			<div><a class="alt-style-link" href="#">Queens/Manhattan/Bronx/Brooklyn/SI</a></div>
+			<div>Email us at: <span style="font-weight: bold">peter@emeralddoorsnyc.com</span></div>
+			
 		</div>
-		<div class="title-slanted-background title-slanted-image"></div>
-		<div class="title-slanted-background title-slanted-overlay"></div>
 	</div>
-	<div style="background-color: #2196F3; margin-top: 3px">
-		<ul class="nav nav-pills nav-justified nav-custom">
-			<li role="presentation" class="dropdown" id="nav-door-dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Doors <span class="caret"></span></a>
-				<ul class="dropdown-menu" style="font-size: 16px">
-					<li><a href="cellar.html">Cellar Doors</a></li>
-					<li><a href="commercial.html">Commercial Doors</a></li>
-					<li><a href="fire.html">Fire Rated Doors</a></li>
-					<li><a href="gate.html">Gate Doors</a></li>
-					<li><a href="soundresistant.html">Sound Resistant Doors</a></li>
-				</ul>
-			</li>
-			<li><a href="windowgates.html">Window Gates</a></li>
-			<li><a href="locks.html">Locks</a></li>
-			<li><a href="#">Violations Corrected</a></li>
-			<li><a href="#">Contact Us</a></li>
-			<li><a href="#">Feedback</a></li>
-		</ul>
+	<div class="title-black-bar"></div>
+	<div class="container title-menu">
+		<div class="title-menu-item dropdown" id="nav-door-dropdown">
+			<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Doors <span class="caret"></span></a>
+			<ul class="dropdown-menu" style="font-size: 16px">
+				<li><a href="cellar.html">Cellar Doors</a></li>
+				<li><a href="commercial.html">Commercial Doors</a></li>
+				<li><a href="fire.html">Fire Rated Doors</a></li>
+				<li><a href="gate.html">Gate Doors</a></li>
+				<li><a href="soundresistant.html">Sound Resistant Doors</a></li>
+			</ul>
+		</div>
+		<div class="title-menu-item"><a href="windowgates.html">Window Gates</a></div>
+		<div class="title-menu-item"><a href="locks.html">Locks</a></div>
+		<div class="title-menu-item"><a href="#">Violations Corrected</a></div>
+		<div class="title-menu-item"><a href="#">Contact Us</a></div>
+		<div class="title-menu-item"><a href="#">Feedback</a></div>
 	</div>
 </div>
 
