--- a/cellar.html
+++ b/cellar.html
@@ -6,6 +6,7 @@
 		<meta name="keywords" content="cellar,basement,doors,bilco,gordon,sloped,waterproof">
 		<title>Waterproof Cellar Basement Doors furnished and installed in New York by Emerald Doors</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="css/header.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
 	<body>
