--- a/commercial.html
+++ b/commercial.html
@@ -7,8 +7,7 @@
 		<meta name="keywords" content="commercial, doors">
 		<title>Commercial Doors installed in days by Emerald Doors</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/header.css" />
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/style.min.css" />
 	</head>
 	<body>
 		<div id="header">
