--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 	<div class="container title-block">
 		<a href="index.html"><img class="logo" src="images/logo.gif"/></a>
 		<div class="title-block-content">EMERALD DOORS</div>
-		<div class="title-block-side">
+		<div class="title-block-side hidden-sm">
 			<div style="position:absolute; right: 0px; top:0px">
 				<a style="color: red" href="https://www.yelp.com/biz/emerald-doors-astoria"><img height="40" src="images/Yelp_trademark_RGB_outline.png"/></a>
 			</div>
