--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 		<meta name="keywords" content="doors,commercial,residential,metal,wood,fiberglass,entry,steel,kalamein,fire,gate,window">
 		<title>Emerald Doors is New York City's prime source for commercial and residential doors plus installation services.</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/header.css" />
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/style.min.css" />
 	</head>
 	<body>
 		<div id="header"></div>
